--- a/bank.web/WebContent/WEB-INF/template.xhtml
+++ b/bank.web/WebContent/WEB-INF/template.xhtml
@@ -1,41 +1,39 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"> 
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:ui="http://java.sun.com/jsf/facelets"
-      xmlns:f="http://java.sun.com/jsf/core"
-      xmlns:h="http://java.sun.com/jsf/html"
-      xmlns:p="http://primefaces.org/ui"> 
+	xmlns:ui="http://java.sun.com/jsf/facelets"
+	xmlns:f="http://java.sun.com/jsf/core"
+	xmlns:h="http://java.sun.com/jsf/html"
+	xmlns:p="http://primefaces.org/ui">
 
 <h:head>
-	<h:outputStylesheet library="css" name="styles.css"  />
-    <ui:insert name="htmlhead" />
+	<h:outputStylesheet library="css" name="styles.css" />
+	<ui:insert name="htmlhead" />
 </h:head>
 
 <!-- Placed in the WEB-INF to avoid direct user access -->
 
 <body>
-	<div id="container"> 
-		<div id="header">
-			<a>test header</a>
-			<br/>
-			<h:panelGroup rendered="#{not uiParam}">
-	    		<a>Parameter sent from content page: </a>
-    			<h:outputText value="#{uiParam}"></h:outputText>
-			</h:panelGroup>
-		</div>
-	
-		<div style="overflow:hidden;">
-			<div id="navigation">
-				<a>test menu</a>
-				<ui:include src="menu.xhtml"/>			
-			</div>
 
-			<div id="content">
-				<ui:insert name="content"/>    
-			</div>
-		</div>
-		<div id="footer">
-			<a>test footer</a>
-		</div>
-	</div>
-</body> 
+	<p:layout fullPage="true" >
+		<p:layoutUnit position="north" >
+			<!-- style="border-style:none" -->
+		header
+		</p:layoutUnit>
+
+		<p:layoutUnit position="west" size="340" style="height:400px">
+
+			<ui:include src="menu2.xhtml" />
+		</p:layoutUnit>
+
+		<p:layoutUnit position="center">
+		content
+		</p:layoutUnit>
+		
+				<p:layoutUnit position="south" size="100">
+		footer
+		</p:layoutUnit>
+
+	</p:layout>
+
+</body>
 </html>
