changes variable name in accountoverview page

--- a/bank.web/WebContent/accountoverview.xhtml
+++ b/bank.web/WebContent/accountoverview.xhtml
@@ -16,11 +16,11 @@
     
     <!-- Define the content to be displayed -->
     <ui:define name="content">        
-		<ui:repeat var="orly" value="#{accountOverviewBean.accounts}">
-			<h:outputText value="#{orly.accountName}"/>
-        	<h:outputText value="#{orly.regNumber} #{orly.accountNumber}"/>
+		<ui:repeat var="account" value="#{accountOverviewBean.accounts}">
+			<h:outputText value="#{account.accountName}"/>
+        	<h:outputText value="#{account.regNumber} #{account.accountNumber}"/>
         	<br/>
-        	<h:outputText value="#{orly.balance.toString()}" />
+        	<h:outputText value="#{account.balance.toString()}" />
         	<br/>
     	</ui:repeat>
     </ui:define>
