--- a/bank.web/WebContent/WEB-INF/template.xhtml
+++ b/bank.web/WebContent/WEB-INF/template.xhtml
@@ -29,7 +29,7 @@
 		<div style="overflow:hidden;">
 			<div id="navigation">
 				<a>test menu</a>
-				<ui:include src="menu2.xhtml" />		
+				<ui:include src="menu.xhtml" />		
 			</div>
 
 			<div id="content">
