--- a/bank.web/WebContent/WEB-INF/template.xhtml
+++ b/bank.web/WebContent/WEB-INF/template.xhtml
@@ -18,26 +18,30 @@
 
 	<div id="container"> 
 		<div id="header">
-			<a>test header</a>
-			<br/>
-			<h:panelGroup rendered="#{not uiParam}">
-	    		<a>Parameter sent from content page: </a>
-    			<h:outputText value="#{uiParam}"></h:outputText>
-			</h:panelGroup>
-		</div>
-	
-		<div style="overflow:hidden;">
-			<div id="navigation">
-				<a>test menu</a>
-				<ui:include src="menu.xhtml" />		
+			<div id="inner_header">
+				<a>test header</a>
+				<br/>
+				<h:panelGroup rendered="#{not uiParam}">
+		    		<a>Parameter sent from content page: </a>
+	    			<h:outputText value="#{uiParam}"></h:outputText>
+				</h:panelGroup>
 			</div>
-
+		</div>
+		<div style="overflow:hidden;" id="content_wrapper">
 			<div id="content">
-				<ui:insert name="content"/>    
+				<div id="navigation">
+					<ui:include src="menu.xhtml" />		
+				</div>
+
+				<div id="inner_content">
+					<ui:insert name="content"/>  
+				</div>
 			</div>
 		</div>
 		<div id="footer">
-			<a>test footer</a>
+			<div id="inner_footer">
+				<a>test footer</a>
+			</div>
 		</div>
 	</div>
 
