Added simple placeholder logo

--- a/bank.web/WebContent/WEB-INF/template.xhtml
+++ b/bank.web/WebContent/WEB-INF/template.xhtml
@@ -14,12 +14,7 @@
 	<div id="container"> 
 		<div id="header">
 			<div id="inner_header">
-				<a>test header</a>
-				<br/>
-				<h:panelGroup rendered="#{not uiParam}">
-		    		<a>Parameter sent from content page: </a>
-	    			<h:outputText value="#{uiParam}"></h:outputText>
-				</h:panelGroup>
+				<a id="logo_text">BANK</a>
 			</div>
 		</div>
 
