--- a/bank.web/WebContent/WEB-INF/template.xhtml
+++ b/bank.web/WebContent/WEB-INF/template.xhtml
@@ -14,7 +14,8 @@
 	<div id="container"> 
 		<div id="header">
 			<div id="inner_header">
-				<a id="logo_text">BANK</a>
+				<img src="https://images.vexels.com/media/users/3/129288/isolated/lists/52e06e07244a3590366669665ea540e3-bank-circle-icon-3.png" id="logo" alt="bank"></img>
+				<p id="logo_text">BANK</p>
 			</div>
 		</div>
 
