updated account transfer class

--- a/bank.web/WebContent/accounttransfer.xhtml
+++ b/bank.web/WebContent/accounttransfer.xhtml
@@ -9,16 +9,18 @@
 	<ui:composition template="/WEB-INF/template.xhtml">
 	
 	
-	<ui:define name ="title">
-	Konto-overførsel
+	<ui:define name ="Header">
+	<div>Konto-overførsel</div>
+	
 	</ui:define>
 	
+	<br></br>
 	<ui:define name="content">
 	
-	<p:dataTable>
-	<p:column HeaderText ="konto"> default text</p:column> <br></br>
-	<p:column> default text 2</p:column>
-	</p:dataTable>
+	<div>
+	lol
+	<p:inputText></p:inputText>
+	</div>
 	
 	</ui:define>
 	
