--- a/bank.web/WebContent/accounttransfer.xhtml
+++ b/bank.web/WebContent/accounttransfer.xhtml
@@ -7,21 +7,20 @@
 	  xmlns:c="http://java.sun.com/jsp/jstl/core">
     	
 	<ui:composition template="/WEB-INF/template.xhtml">
-	
-	
-	<ui:define name ="Header">
-	<div>Konto-overførsel</div>
-	
-	</ui:define>
-	
-	<br></br>
-	<ui:define name="content">
-	
+
+	<ui:define name="content" >
+<p:panel header="Kontooverførsel"> </p:panel>		
+<div align="center">
 	<div>
-	lol
-	<p:inputText></p:inputText>
+	Beløb: &nbsp;&nbsp;&nbsp;  <p:inputNumber placeholder="0,00"></p:inputNumber>  &nbsp; DKK
+	</div>
+	<br></br>
+	<div>
+	Fra Konto: &nbsp;&nbsp; 
 	</div>
 	
+	
+	</div>
 	</ui:define>
 	
 	</ui:composition>
