updated accountransfer classes
corrected typo in menu.xhtml as well

--- a/bank.web/WebContent/WEB-INF/menu.xhtml
+++ b/bank.web/WebContent/WEB-INF/menu.xhtml
@@ -16,7 +16,7 @@
 	
 					<p:menuitem value="Account Overview" outcome="accountoverview" />
 					<p:menuitem value="Create Account" />
-					<p:menuitem value="Transfer Founds" />
+					<p:menuitem value="Transfer Funds" />
 	
 				</p:submenu>
 				<p:submenu label="Cards" styleClass="site-nav__link">
