--- a/bank.web/WebContent/accounttransfer.xhtml
+++ b/bank.web/WebContent/accounttransfer.xhtml
@@ -18,7 +18,7 @@
             <h:panelGrid columns="2" >
             	
             	<p:outputLabel for="country" value="Fra konto: " /> 
-            	<p:selectOneMenu id="country" value="#{dropdownView.country}">
+            	<p:selectOneMenu id="country" value="#{}">
 
                 	<f:selectItem itemLabel="Vælg konto" itemValue="" noSelectionOption="true" />
                 	<f:selectItems value="#{dropdownView.countries}" />
