--- a/bank.web/WebContent/accounttransfer.xhtml
+++ b/bank.web/WebContent/accounttransfer.xhtml
@@ -39,7 +39,7 @@
                 <h:inputText p:type="number" p:step="1"/>
 
             </h:panelGrid>
-            <h:commandButton value="ボタン" action=""/>
+            <h:commandButton value="ボタン" />
         </h:form>
     </h:body>
 	
