--- a/bank.web/WebContent/customer/accountoverview.xhtml
+++ b/bank.web/WebContent/customer/accountoverview.xhtml
@@ -1,10 +1,12 @@
-<ui:composition template="WEB-INF/template.xhtml"
-    xmlns="http://www.w3.org/1999/xhtml"   
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml"   
     xmlns:ui="http://java.sun.com/jsf/facelets"
     xmlns:f="http://xmlns.jcp.org/jsf/core"
     xmlns:p="http://primefaces.org/ui"
 	xmlns:c="http://java.sun.com/jsp/jstl/core"
     xmlns:h="http://xmlns.jcp.org/jsf/html">
+    
+	<ui:composition template="/WEB-INF/template.xhtml">
     
     <!-- Change stuff in the head tag -->
     <ui:define name="htmlhead">
@@ -33,3 +35,4 @@
 		</p:dataTable>
     </ui:define>
 </ui:composition>
+</html>
